# EECS468

EECS468-CUDA-Labs/labs/src/lab1/: matrixmul.cu
EECS468-CUDA-Labs/labs/src/lab2/: answers.txt  bankTest.cpp  matrixmul.cu  matrixmul.h  matrixmul_kernel.cu
EECS468-CUDA-Labs/labs/src/lab3/: opt_2dhisto.cu  opt_2dhisto.h  ref_2dhisto.h  test_harness.cpp  util.cpp  util.h
EECS468-CUDA-Labs/labs/src/lab4/: scan_gold.cpp  scan_largearray.cu  scan_largearray_kernel.cu
FinalProject/nfft/: .gitignore  Makefile.in  configure  configure.ac
FinalProject/nfft/applications/: Makefile.in
FinalProject/nfft/applications/fastgauss/: Makefile.in
FinalProject/nfft/applications/fastsum/: Makefile.in
FinalProject/nfft/applications/fastsumS2/: Makefile.in
FinalProject/nfft/applications/mri/: Makefile.in
FinalProject/nfft/autom4te.cache/: output.0  requests  traces.0  traces.1
FinalProject/nfft/cuda/: .nfft_cuda.cu.swm  .nfft_cuda.cu.swn  .nfft_cuda.cu.swo  .nfft_cuda.cu.swp  .nfft_cuda.h.swp  .nfft_timer.h.swp  .test_cuda.cpp.swl  .test_cuda.cpp.swm  .test_cuda.cpp.swn  .test_cuda.cpp.swo  .test_cuda.cpp.swp  Makefile.am  Makefile.in  nfft_cuda.cu  nfft_cuda.cu~  nfft_cuda.h  nfft_timer.cpp  nfft_timer.h  test_cuda.cpp
FinalProject/nfft/doxygen/: Makefile.in
FinalProject/nfft/examples/: Makefile.in
FinalProject/nfft/include/: .nfft3.h.swp  Makefile.in  config.h.in
FinalProject/nfft/kernel/: Makefile.in
FinalProject/nfft/matlab/: Makefile.in
FinalProject/nfft/support/: Makefile.in
FinalProject/nfft/tests/: Makefile.in
labs/src/lab1/: matrixmul.cu  matrixmul_kernel.cu
(+35 files in other folders)
